css page mobile_first

--- a/pages/css.html
+++ b/pages/css.html
@@ -111,7 +111,7 @@
           <p><strong>6. Адаптивный дизайн</strong></p>
           <li><a href="../pages/css/ch6-1.html">Введение в адаптивную верстку.</a></li>
           <li><a href="../pages/css/ch6-2.html">Использование медиа-запросов (<code style="background-color: rgba(169, 169, 169, 0.315);">@media</code>) для различных устройств.</a></li>
-          <li>Основы подхода "Mobile First".</li>
+          <li><a href="../pages/css/ch6-3.html">Основы подхода "Mobile First".</a></li>
           <li>Работа с резиновыми единицами: <code style="background-color: rgba(169, 169, 169, 0.315);">em</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">rem</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">vw</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">vh</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">%</code>.</li>
         </ul>
 
