css transition page

--- a/pages/css.html
+++ b/pages/css.html
@@ -118,7 +118,7 @@
         <ul>
           <p><strong>7. Трансформации и анимации</strong></p>
           <li><a href="../pages/css/ch7-1.html">Трансформации: <code style="background-color: rgba(169, 169, 169, 0.315);">transform</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">translate</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">rotate</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">scale</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">skew</code>.</a></li>
-          <li>Переходы: <code style="background-color: rgba(169, 169, 169, 0.315);">transition</code>, как задать временные интервалы и задержки.</li>
+          <li><a href="../pages/css/ch7-2.html">Переходы: <code style="background-color: rgba(169, 169, 169, 0.315);">transition</code>, как задать временные интервалы и задержки.</a></li>
           <li>Анимации: свойство <code style="background-color: rgba(169, 169, 169, 0.315);">animation</code>, ключевые кадры <code style="background-color: rgba(169, 169, 169, 0.315);">@keyframes</code>.</li>
         </ul>
 
