css flexbox layout page

--- a/pages/css.html
+++ b/pages/css.html
@@ -124,7 +124,7 @@
 
         <ul>
           <p><strong>8. Практика: Стилизация веб-страницы</strong></p>
-          <li>Создание простого макета сайта с помощью Flexbox.</li>
+          <li><a href="../pages/css/ch8-1.html">Создание простого макета сайта с помощью Flexbox.</a></li>
           <li>Стилизация типичных элементов веб-страницы (шапка, меню, контент, подвал).</li>
           <li>Адаптация сайта под разные устройства с помощью медиа-запросов.</li>
         </ul>
@@ -164,10 +164,6 @@
           <li>Практика на платформах вроде <a href="https://codepen.io/">CodePen</a> и <a href="https://www.frontendmentor.io/">Frontend Mentor</a>.</li>
         </ul>
         <hr>
-        <a href="../pages/css/css-sandbox.html">css sandbox</a>
-        <a href="../pages/css/css-sandbox2.html">css sandbox2</a>
-        <a href="../pages/css/css-sandbox3.html">css sandbox-flexbox</a>
-
       </article>
     </main>
 
