css styling page

--- a/pages/css.html
+++ b/pages/css.html
@@ -125,7 +125,7 @@
         <ul>
           <p><strong>8. Практика: Стилизация веб-страницы</strong></p>
           <li><a href="../pages/css/ch8-1.html">Создание простого макета сайта с помощью Flexbox.</a></li>
-          <li>Стилизация типичных элементов веб-страницы (шапка, меню, контент, подвал).</li>
+          <li><a href="../pages/css/ch8-2.html">Стилизация типичных элементов веб-страницы (шапка, меню, контент, подвал).</a></li>
           <li>Адаптация сайта под разные устройства с помощью медиа-запросов.</li>
         </ul>
 
