--- a/pages/css.html
+++ b/pages/css.html
@@ -126,7 +126,7 @@
           <p><strong>8. Практика: Стилизация веб-страницы</strong></p>
           <li><a href="../pages/css/ch8-1.html">Создание простого макета сайта с помощью Flexbox.</a></li>
           <li><a href="../pages/css/ch8-2.html">Стилизация типичных элементов веб-страницы (шапка, меню, контент, подвал).</a></li>
-          <li>Адаптация сайта под разные устройства с помощью медиа-запросов.</li>
+          <li><a href="../pages/css/ch8-3.html">Адаптация сайта под разные устройства с помощью медиа-запросов.</a></li>
         </ul>
 
         <ul>
