--- a/pages/css.html
+++ b/pages/css.html
@@ -131,7 +131,7 @@
 
         <ul>
           <p><strong>9. Углубление: CSS-переменные и препроцессоры</strong></p>
-          <li>Использование CSS-переменных (<code style="background-color: rgba(169, 169, 169, 0.315);">--var</code> и <code style="background-color: rgba(169, 169, 169, 0.315);">var()</code>).</li>
+          <li><a href="../pages/css/ch9-1.html">Использование CSS-переменных (<code style="background-color: rgba(169, 169, 169, 0.315);">--var</code> и <code style="background-color: rgba(169, 169, 169, 0.315);">var()</code>).</a></li>
           <li>Введение в препроцессоры: Sass, LESS (основные концепции).</li>
         </ul>
 
