css Sass and LESS page

--- a/pages/css.html
+++ b/pages/css.html
@@ -132,7 +132,7 @@
         <ul>
           <p><strong>9. Углубление: CSS-переменные и препроцессоры</strong></p>
           <li><a href="../pages/css/ch9-1.html">Использование CSS-переменных (<code style="background-color: rgba(169, 169, 169, 0.315);">--var</code> и <code style="background-color: rgba(169, 169, 169, 0.315);">var()</code>).</a></li>
-          <li>Введение в препроцессоры: Sass, LESS (основные концепции).</li>
+          <li><a href="../pages/css/ch9-2.html">Введение в препроцессоры: Sass, LESS (основные концепции).</a></li>
         </ul>
 
         <ul>
