--- a/pages/css.html
+++ b/pages/css.html
@@ -138,7 +138,7 @@
         <ul>
           <p><strong>10. Продвинутые темы</strong></p>
           <li><a href="../pages/css/ch10-1.html">CSS Grid для сложных макетов.</a></li>
-          <li>Переменные и каскадность.</li>
+          <li><a href="../pages/css/ch10-2.html">Переменные и каскадность.</a></li>
           <li>Углубленное использование псевдоклассов и псевдоэлементов.</li>
           <li>Оптимизация производительности CSS.</li>
         </ul>
