css pseudo classes page

--- a/pages/css.html
+++ b/pages/css.html
@@ -139,7 +139,7 @@
           <p><strong>10. Продвинутые темы</strong></p>
           <li><a href="../pages/css/ch10-1.html">CSS Grid для сложных макетов.</a></li>
           <li><a href="../pages/css/ch10-2.html">Переменные и каскадность.</a></li>
-          <li>Углубленное использование псевдоклассов и псевдоэлементов.</li>
+          <li><a href="../pages/css/ch10-3.html">Углубленное использование псевдоклассов и псевдоэлементов.</a></li>
           <li>Оптимизация производительности CSS.</li>
         </ul>
 
