css performance page

--- a/pages/css.html
+++ b/pages/css.html
@@ -140,7 +140,7 @@
           <li><a href="../pages/css/ch10-1.html">CSS Grid для сложных макетов.</a></li>
           <li><a href="../pages/css/ch10-2.html">Переменные и каскадность.</a></li>
           <li><a href="../pages/css/ch10-3.html">Углубленное использование псевдоклассов и псевдоэлементов.</a></li>
-          <li>Оптимизация производительности CSS.</li>
+          <li><a href="../pages/css/ch10-4.html">Оптимизация производительности CSS.</a></li>
         </ul>
 
         <ul>
