--- a/pages/css/ch1-3.html
+++ b/pages/css/ch1-3.html
@@ -40,7 +40,7 @@
           </ul>
           <p>Вот базовый пример:</p>
 <pre>
-  <code class="lang-html">
+  <code class="lang-css">
     p {
       color: red;
       font-size: 16px;
@@ -48,9 +48,9 @@
   </code>
 </pre>
           <ul>
-            <li>p — это селектор, который выбирает все HTML-теги &lt;p> (абзацы).</li>
-            <li>Внутри фигурных скобок {} находится блок декларации.</li>
-            <li>В блоке декларации указаны два свойства: color и font-size, которые определяют цвет текста и размер шрифта для всех абзацев на странице.</li>
+            <li><code>p</code> — это селектор, который выбирает все HTML-теги <code>&lt;p></code> (абзацы).</li>
+            <li>Внутри фигурных скобок <code>{}</code> находится блок декларации.</li>
+            <li>В блоке декларации указаны два свойства: <code>color</code> и <code>font-size</code>, которые определяют цвет текста и размер шрифта для всех абзацев на странице.</li>
           </ul>
           <p><strong>Компоненты CSS-правила:</strong></p>
           <ol>
@@ -67,7 +67,7 @@
           <ul>
             <li><strong>По тегу</strong>: применяется ко всем элементам определенного тега.</li>
 <pre>
-  <code>
+  <code class="lang-css">
     h1 {
       color: blue;
     }
@@ -75,7 +75,7 @@
 </pre>
             <li><strong>По классу</strong>: применяется к элементам с определенным классом. В CSS классы обозначаются точкой <code>.</code> перед именем класса.</li>
 <pre>
-  <code>
+  <code class="lang-css">
     .button {
       background-color: green;
     }
@@ -83,7 +83,7 @@
 </pre>
             <li><strong>По идентификатору (id)</strong>: применяется к элементу с уникальным атрибутом id. В CSS идентификаторы обозначаются символом решетки #.</li>
 <pre>
-  <code>
+  <code class="lang-css">
     #header {
       background-color: yellow;
     }
@@ -94,7 +94,7 @@
           <ul>
             <li><strong>Селекторы потомков</strong>: применяют стиль ко всем элементам-потомкам определенного родителя.</li>
 <pre>
-  <code>
+  <code class="lang-css">
     div p {
       color: red;
     }
@@ -103,7 +103,7 @@
             <p>Применяет красный цвет ко всем абзацам &lt;p>, которые находятся внутри &lt;div>.</p>
             <li><strong>Групповые селекторы</strong>: позволяют применять одно и то же правило к нескольким элементам.</li>
 <pre>
-  <code>
+  <code class="lang-css">
     h1, h2, p {
       color: black;
     }
@@ -116,7 +116,7 @@
           <ul>
             <li><code>:hover</code>: применяется к элементу, когда на него наводят курсор.</li>
 <pre>
-  <code>
+  <code class="lang-css">
     a:hover {
       color: red;
     }
@@ -125,7 +125,7 @@
             <p>Меняет цвет ссылки на красный при наведении мыши.</p>
             <li><code>:nth-child()</code>: применяется к конкретным элементам на основе их позиции среди родственных элементов.</li>
 <pre>
-  <code>
+  <code class="lang-css">
     li:nth-child(2) {
       color: green;
     }
@@ -145,7 +145,7 @@
             </li>
             <li><strong>Вложенность</strong>: если одно и то же свойство назначено элементу несколько раз, то применяется последнее объявление в коде.</li>
 <pre>
-  <code>
+  <code class="lang-css">
     p {
       color: black;
     }
@@ -161,7 +161,7 @@
           <p><strong>Важность (important):</strong></p>
           <p>Иногда можно использовать модификатор <code>!important</code>, чтобы принудительно применить стиль, игнорируя все остальные правила и каскадность.</p>
 <pre>
-  <code>
+  <code class="lang-css">
     p {
       color: blue !important;
     }
@@ -171,7 +171,7 @@
           <li><strong>Комментарии в CSS</strong></li>
           <p>Комментарии помогают делать код более читаемым и понятным. Комментарии в CSS заключаются между символами <code>/*</code> и <code>*/</code>.</p>
 <pre>
-  <code>
+  <code class="lang-css">
     /* Этот блок кода стилизует заголовки */
     h1 {
       font-size: 24px;
@@ -194,11 +194,6 @@
         </ol>
         <p><strong>Заключение</strong></p>
         <p>Понимание основ синтаксиса CSS позволяет не только правильно писать стили, но и эффективно управлять ими, создавать адаптивные, чистые и поддерживаемые стили для веб-страниц.</p>
-
-       
-
-
-
       </article>
     </main>
 
