--- a/pages/css/ch1-4.html
+++ b/pages/css/ch1-4.html
@@ -43,7 +43,7 @@
     }
   </code>
 </pre>
-            <li><strong>Селекторы по классу</strong>: Селекторы классов позволяют выбрать элементы с определенным классом. В HTML для элемента можно задать атрибут class, который можно использовать для селектора в CSS. Перед именем класса ставится точка (.).</li>
+            <li><strong>Селекторы по классу</strong>: Селекторы классов позволяют выбрать элементы с определенным классом. В HTML для элемента можно задать атрибут class, который можно использовать для селектора в CSS. Перед именем класса ставится точка (<code>.</code>).</li>
 <pre>
   <code class="lang-css">
     .button {
@@ -51,13 +51,13 @@
     }
   </code>
 </pre>
-            <p>Этот стиль будет применен ко всем элементам с классом button. Например:</p>
+            <p>Этот стиль будет применен ко всем элементам с классом <code>button</code>. Например:</p>
 <pre>
   <code>
     &lt;button class="button">Нажми меня&lt;/button>
   </code>
 </pre>
-            <li><strong>Селекторы по идентификатору (id)</strong>: Селекторы идентификаторов позволяют выбрать элемент по его уникальному id. В отличие от классов, идентификатор должен быть уникален на странице. Для выбора элемента по id в CSS используется символ решетки (#).</li>
+            <li><strong>Селекторы по идентификатору (id)</strong>: Селекторы идентификаторов позволяют выбрать элемент по его уникальному id. В отличие от классов, идентификатор должен быть уникален на странице. Для выбора элемента по id в CSS используется символ решетки (<code>#</code>).</li>
 <pre>
   <code class="lang-css">
     #header {
@@ -65,7 +65,7 @@
     }
   </code>
 </pre>
-            <p>Этот стиль применится к элементу с идентификатором header. Например:</p>
+            <p>Этот стиль применится к элементу с идентификатором <code>header</code>. Например:</p>
 <pre>
   <code>
     &lt;div id="header">Заголовок&lt;/div>
@@ -79,7 +79,7 @@
     }
   </code>
 </pre>
-            <p>Этот стиль применит черный цвет ко всем заголовкам &lt;h1>, &lt;h2> и абзацам &lt;p>.</p>
+            <p>Этот стиль применит черный цвет ко всем заголовкам <code>&lt;h1></code>, <code>&lt;h2></code> и абзацам <code>&lt;p></code>.</p>
             <li><strong>Комбинированные селекторы</strong>: Можно выбирать элементы, основываясь на их родительских элементах или комбинациях классов и тегов. Например:</li>
 <pre>
   <code class="lang-css">
@@ -88,7 +88,7 @@
     }
   </code>
 </pre>
-            <p>Этот стиль будет применен только к элементам &lt;p>, которые находятся внутри элемента &lt;div>. А вот стиль ниже применится ко всем абзацам &lt;p>, у которых есть класс highlight:</p>
+            <p>Этот стиль будет применен только к элементам <code>&lt;p></code>, которые находятся внутри элемента <code>&lt;div></code>. А вот стиль ниже применится ко всем абзацам <code>&lt;p></code>, у которых есть класс <code>highlight</code>:</p>
 <pre>
   <code class="lang-css">
     p.highlight {
@@ -96,7 +96,7 @@
     }
   </code>
 </pre>
-            <li><strong>Псевдоклассы</strong>: Псевдоклассы позволяют выбирать элементы в определенных состояниях или на основе их положения среди других элементов. Например, :hover используется для изменения стилей элемента при наведении на него мыши:</li>
+            <li><strong>Псевдоклассы</strong>: Псевдоклассы позволяют выбирать элементы в определенных состояниях или на основе их положения среди других элементов. Например, <code>:hover</code> используется для изменения стилей элемента при наведении на него мыши:</li>
 <pre>
   <code class="lang-css">
     a:hover {
@@ -107,8 +107,8 @@
             <p>Этот стиль изменит цвет ссылки на красный при наведении на нее.</p>
             <li><strong>Псевдоэлементы</strong>: Псевдоэлементы позволяют стилизовать определенные части элемента, такие как первый символ или строка, или добавлять контент до или после элемента. Примеры:</li>
             <ul>
-              <li>::before: добавляет контент перед элементом.</li>
-              <li>::after: добавляет контент после элемента.</li>
+              <li><code>::before</code>: добавляет контент перед элементом.</li>
+              <li><code>::after</code>: добавляет контент после элемента.</li>
             </ul>
 <pre>
   <code class="lang-css">
@@ -118,61 +118,61 @@
     }
   </code>
 </pre>
-            <p>Этот стиль добавит стрелку перед каждым абзацем &lt;p>.</p>
+            <p>Этот стиль добавит стрелку перед каждым абзацем <code>&lt;p></code>.</p>
           </ol>
           <li><strong>Свойства в CSS</strong></li>
           <p>Свойства в CSS задают, какие именно стили будут применены к выбранным элементам. Свойства описывают конкретный аспект внешнего вида элемента: цвет, шрифт, отступы, размеры, фон и многое другое.</p>
           <p>Примеры свойств:</p>
           <ol>
-            <li>color — задает цвет текста.</li>
+            <li><code>color</code> — задает цвет текста.</li>
 <pre>
   <code class="lang-css">
     color: blue;
   </code>
 </pre>
-            <li>background-color — устанавливает цвет фона элемента.</li>
+            <li><code>background-color</code> — устанавливает цвет фона элемента.</li>
 <pre>
   <code class="lang-css">
     background-color: yellow;
   </code>
 </pre>
-            <li>font-size — определяет размер текста.</li>
+            <li><code>font-size</code> — определяет размер текста.</li>
 <pre>
   <code class="lang-css">
     font-size: 16px;
   </code>
 </pre>
-            <li>margin — задает внешние отступы вокруг элемента.</li>
+            <li><code>margin</code> — задает внешние отступы вокруг элемента.</li>
 <pre>
   <code class="lang-css">
     margin: 10px;
   </code>
 </pre>
-            <li>padding — определяет внутренние отступы между содержимым элемента и его границами.</li>
+            <li><code>padding</code> — определяет внутренние отступы между содержимым элемента и его границами.</li>
 <pre>
   <code class="lang-css">
     padding: 15px;
   </code>
 </pre>
-            <li>border — добавляет границу вокруг элемента.</li>
+            <li><code>border</code> — добавляет границу вокруг элемента.</li>
 <pre>
   <code class="lang-css">
     border: 1px solid black;
   </code>
 </pre>
-            <li>display — определяет, как элемент будет отображаться на странице.</li>
+            <li><code>display</code> — определяет, как элемент будет отображаться на странице.</li>
 <pre>
   <code class="lang-css">
     display: block;
   </code>
 </pre>
-            <li>position — управляет расположением элемента.</li>
+            <li><code>position</code> — управляет расположением элемента.</li>
 <pre>
   <code class="lang-css">
     position: absolute;
   </code>
 </pre>
-            <li>text-align — выравнивает текст внутри элемента по левому, правому краю или центру.</li>
+            <li><code>text-align</code> — выравнивает текст внутри элемента по левому, правому краю или центру.</li>
 <pre>
   <code class="lang-css">
     text-align: center;
@@ -185,7 +185,7 @@
           <ol>
             <li><strong>Цвета</strong>:
               <ul>
-                <li>Цвета могут задаваться с помощью ключевых слов (red, blue), шестнадцатеричных кодов (#ff0000), RGB (rgb(255, 0, 0)) и других форматов.</li>
+                <li>Цвета могут задаваться с помощью ключевых слов (<code>red</code>, <code>blue</code>), шестнадцатеричных кодов (<code>#ff0000</code>), RGB (<code>rgb(255, 0, 0)</code>) и других форматов.</li>
               </ul>
             </li>
 <pre>
@@ -197,7 +197,7 @@
             <li><strong>Длины</strong>:
               <ul>
                 <li>
-                  Длины указываются в абсолютных единицах (например, px, cm) или относительных (например, em, %).
+                  Длины указываются в абсолютных единицах (например, <code>px</code>, <code>cm</code>) или относительных (например, <code>em</code>, <code>%</code>).
                 </li>
               </ul>
             </li>
@@ -222,7 +222,7 @@
             <li><strong>Ключевые слова</strong>:
               <ul>
                 <li>
-                  Некоторые свойства принимают специальные ключевые слова. Например, для свойства display существуют такие ключевые значения, как block, inline, none.
+                  Некоторые свойства принимают специальные ключевые слова. Например, для свойства <code>display</code> существуют такие ключевые значения, как <code>block</code>, <code>inline</code>, <code>none</code>.
                 </li>
               </ul>
             </li>
@@ -233,11 +233,11 @@
 </pre>
             <li><strong>Специальные значения</strong>:
               <ul>
-                <li>CSS поддерживает значения вроде inherit, initial, auto:
+                <li>CSS поддерживает значения вроде <code>inherit</code>, <code>initial</code>, <code>auto</code>:
                   <ul>
-                    <li>inherit: наследует значение свойства от родительского элемента.</li>
-                    <li>initial: сбрасывает свойство до значения по умолчанию.</li>
-                    <li>auto: используется для автоматического расчета значения браузером.</li>
+                    <li><code>inherit</code>: наследует значение свойства от родительского элемента.</li>
+                    <li><code>initial</code>: сбрасывает свойство до значения по умолчанию.</li>
+                    <li><code>auto</code>: используется для автоматического расчета значения браузером.</li>
                   </ul>
                 </li>
               </ul>
@@ -261,7 +261,7 @@
     }
   </code>
 </pre>
-          <p>Этот стиль применяет синий цвет текста, шрифт Arial и размер текста 18px ко всем абзацам.</p>
+          <p>Этот стиль применяет синий цвет текста, шрифт <code>Arial</code> и размер текста <code>18px</code> ко всем абзацам.</p>
           <li>Работа с фоном и отступами:</li>
 <pre>
   <code class="lang-css">
@@ -272,7 +272,7 @@
     }
   </code>
 </pre>
-          <p>Этот код задает серый фон для всех &lt;div>, отступ в 20px вокруг блока и внутренний отступ (padding) в 10px.</p>
+          <p>Этот код задает серый фон для всех <code>&lt;div></code>, отступ в <code>20px</code> вокруг блока и внутренний отступ (<code>padding</code>) в <code>10px</code>.</p>
         </ol>
         <p><strong>Заключение</strong></p>
         <p>Селекторы, свойства и значения — это три основополагающие составляющие CSS. Селекторы позволяют выбирать элементы, свойства задают, какой аспект элемента будет изменен, а значения определяют конкретные параметры этих изменений. Понимание этих понятий поможет тебе грамотно и эффективно использовать CSS для стилизации веб-страниц.</p>
