--- a/pages/css.html
+++ b/pages/css.html
@@ -69,7 +69,7 @@
         <ul>
           <p><strong>1. Введение в CSS</strong></p>
           <li><a href="../pages/css/ch1-1.html">Что такое CSS и зачем он нужен.</a></li>
-          <li>Основные способы подключения CSS: <code style="background-color: rgba(169, 169, 169, 0.315);">inline</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">internal</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">external</code>.</li>
+          <li><a href="../pages/css/ch1-2.html">Основные способы подключения CSS: <code style="background-color: rgba(169, 169, 169, 0.315);">inline</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">internal</code>, <code style="background-color: rgba(169, 169, 169, 0.315);">external</code>.</a></li>
           <li><a href="../pages/css/ch1-3.html">Основные синтаксические правила CSS.</a></li>
           <li><a href="../pages/css/ch1-4.html">Основные понятия: селекторы, свойства, значения.</a></li>
         </ul>
