--- a/pages/html.html
+++ b/pages/html.html
@@ -182,7 +182,7 @@
           </li>
           <li><strong>Комментарии</strong>
             <ul>
-              <li>Тег комментария <code>&lt;!-- комментарий --></code>.</li>
+              <li><a href="../pages/html/ch7-2-1.html">Тег комментария <code>&lt;!-- комментарий --></code>.</a></li>
               <li>Использование комментариев для пояснений в коде.</li>
             </ul>
           </li>
