--- a/pages/html.html
+++ b/pages/html.html
@@ -188,7 +188,7 @@
           </li>
           <li><strong>Ссылки на внешние ресурсы</strong>
             <ul>
-              <li>Подключение CSS и JavaScript: теги <code>&lt;link></code> и <code>&lt;script></code>.</li>
+              <li><a href="../pages/html/ch7-3-1.html">Подключение CSS и JavaScript: теги <code>&lt;link></code> и <code>&lt;script></code>.</a></li>
               <li>Практика: подключение внешних файлов.</li>
             </ul>
           </li>
