css page testing

--- a/pages/css.html
+++ b/pages/css.html
@@ -151,7 +151,7 @@
 
         <ul>
           <p><strong>12. Поддержка кроссбраузерности</strong></p>
-          <li>Как тестировать стили в разных браузерах.</li>
+          <li><a href="../pages/css/ch12-1.html">Как тестировать стили в разных браузерах.</a></li>
           <li>Использование автопрефиксеров.</li>
           <li>Инструменты для тестирования и отладки.</li>
         </ul>
