--- a/pages/css.html
+++ b/pages/css.html
@@ -152,7 +152,7 @@
         <ul>
           <p><strong>12. Поддержка кроссбраузерности</strong></p>
           <li><a href="../pages/css/ch12-1.html">Как тестировать стили в разных браузерах.</a></li>
-          <li>Использование автопрефиксеров.</li>
+          <li><a href="../pages/css/ch12-2.html">Использование автопрефиксеров.</a></li>
           <li>Инструменты для тестирования и отладки.</li>
         </ul>
 
