--- a/pages/js/ch1-9.html
+++ b/pages/js/ch1-9.html
@@ -80,7 +80,7 @@
     console.log(sum);
   </code>
 </pre>
-          <p>В этом примере функция <code>add</code> принимает два параметра, <code>a</code> и <code>b</code>, и возвращает их сумму. При вызове функции <code>add(5, 10)</code> параметр <code>a</code> получает значение <code>5</code>, <code>а b</code> — значение <code>10</code>.</p>
+          <p>В этом примере функция <code>add</code> принимает два параметра, <code>a</code> и <code>b</code>, и возвращает их сумму. При вызове функции <code>add(5, 10)</code> параметр <code>a</code> получает значение <code>5</code>, а <code>b</code> — значение <code>10</code>.</p>
           <li><strong>Тело функции</strong></li>
           <p>Тело функции — это часть кода, которая выполняется, когда функция вызывается. Внутри тела функции можно использовать любые выражения и операторы, как и в обычном коде.</p>
           <p>Пример:</p>
