--- a/pages/css.html
+++ b/pages/css.html
@@ -18,13 +18,13 @@
         color: black;
       }
 
-      a:visited {
-        /* color: #437a16; */
+      /* a:visited {
+        color: #437a16;
       }
 
       a:focus {
         
-      }
+      } */
 
       a:hover {
         /* border-bottom: 1px solid; */
@@ -153,7 +153,7 @@
           <p><strong>12. Поддержка кроссбраузерности</strong></p>
           <li><a href="../pages/css/ch12-1.html">Как тестировать стили в разных браузерах.</a></li>
           <li><a href="../pages/css/ch12-2.html">Использование автопрефиксеров.</a></li>
-          <li>Инструменты для тестирования и отладки.</li>
+          <li><a href="../pages/css/ch12-3.html">Инструменты для тестирования и отладки.</a></li>
         </ul>
 
         <ul>
