--- a/pages/html.html
+++ b/pages/html.html
@@ -18,13 +18,13 @@
         color: black;
       }
 
-      a:visited {
-        /* color: #437a16; */
+      /* a:visited {
+        color: #437a16;
       }
 
       a:focus {
         
-      }
+      } */
 
       a:hover {
         /* border-bottom: 1px solid; */
